# AcmeUI-Native

./: .gitignore  AESTHETIC_IMPROVEMENT.md  AGENTS.md  ARCHITECTURE.md  AcmeUI-Native_Component_Library_Text_Layout_Fix.md  AcmeUI-Native_Gallery_Text_Overlap_Fix.md  CHANGELOG.md  Cargo.toml  DESIGN_SYSTEM.md  README-zhtw.md  README.md  RENDERING_PIPELINE.md  STATUS.md  final.md  spec.md  test.md  todos.md
.github/workflows/: ci.yml
.opencode/: memory.db
.opencode/memory/: memory.db-shm  memory.db-wal
.opencode/status-footer/: state.json
AcmeUI-Native-Agent-Improvement-Pack-v0.2/: 00_AUDIT.md  AGENT_MASTER_PROMPT.md  DESIGN_SYSTEM_V2.md  README.md  REPO_FILE_CHANGES.md  TEST_AND_RELEASE.md  VISUAL_REFERENCE_TEMPLATES.md
AcmeUI-Native-Agent-Improvement-Pack-v0.2/proposed/: design_tokens_v2.json  theme_v2_api.rs
AcmeUI-Native-Agent-Improvement-Pack-v0.2/tasks/: P0-01_NODE_IDENTITY.md  P0-02_INTRINSIC_TEXT_LAYOUT.md  P0-03_RENDERER_BUFFERING.md  P0-04_PLATFORM_EVENT_MODEL.md  P0-05_ACCESSIBILITY_RUNTIME.md  P1-01_THEME_V2.md  P1-02_WIDGET_VISUAL_STATES.md  P1-03_GALLERY_TEMPLATES.md  P2-01_TEXTINPUT_HARDENING.md  P2-02_DATA_WIDGETS.md
AcmeUI-Native_Analysis_Pack/: AcmeUI-Native_optimization_todos.md  AcmeUI-Native_target_architecture.md  AcmeUI-Native_verification_plan.md  AcmeUI-Native_專案分析與優化建議.md
AcmeUI-Native_Updated_Analysis_Pack/: 00_README.md  01_Updated_Project_Analysis.md  02_Optimization_Todos.md  03_Code_Fix_Recommendations.md  04_Milestone_Roadmap.md
apps/acme-gallery/: Cargo.toml
apps/acme-gallery/src/: main.rs
apps/benchmark/: Cargo.toml
apps/gallery/: Cargo.toml
apps/playground/: Cargo.toml
apps/playground/src/: main.rs
crates/acme-accessibility/: Cargo.toml
crates/acme-accessibility/src/: lib.rs
crates/acme-animation/: Cargo.toml
crates/acme-core/: Cargo.toml
crates/acme-devtools/: Cargo.toml
crates/acme-devtools/src/: lib.rs
crates/acme-layout/: Cargo.toml
crates/acme-platform/: Cargo.toml
crates/acme-platform/src/: clipboard.rs  lib.rs
crates/acme-render-wgpu/: Cargo.toml
crates/acme-render-wgpu/src/: batch.rs  golden.rs  lib.rs  quad.wgsl  text.wgsl
crates/acme-style/: Cargo.toml
crates/acme-style/src/: color.rs  lib.rs  style.rs  styled.rs  tailwind.rs
crates/acme-text/: Cargo.toml
crates/acme-textinput/: Cargo.toml
crates/acme-textinput/src/: lib.rs
crates/acme-theme/: Cargo.toml
crates/acme-ui/: Cargo.toml
crates/acme-ui/src/: lib.rs  template.rs
crates/acme-ui/src/browser/: audio_player.rs  carousel.rs  code_viewer.rs  document_viewer.rs  embed.rs  image_gallery.rs  lightbox.rs  map_view.rs  media_grid.rs  mod.rs  pdf_viewer.rs  rich_text.rs  url_preview.rs  video_player.rs  web_frame.rs  web_preview.rs  zoom_view.rs
crates/acme-ui/src/charts/: area_chart.rs  bar_chart.rs  box_plot.rs  bubble_chart.rs  candlestick_chart.rs  donut_chart.rs  funnel_chart.rs  gauge.rs  heatmap.rs  histogram.rs  line_chart.rs  mod.rs  parallel_coordinates.rs  pie_chart.rs  radar_chart.rs  radial_bar.rs  scatter_chart.rs  sparkline.rs  timeline_chart.rs  treemap.rs  waterfall.rs
crates/acme-ui/src/desktop/: command_bar.rs  dock.rs  image_view.rs  markdown_view.rs  menubar.rs  mod.rs  navigation_view.rs  property_grid.rs  resize_handle.rs  sidenav.rs  status_tray.rs  taskbar.rs  title_bar.rs  window_controls.rs
crates/acme-ui/src/foundations/: accordion.rs  alert.rs  aspect_ratio.rs  avatar.rs  badge.rs  banner.rs  button_hint.rs  calendar.rs  callout.rs  chip.rs  code.rs  collapsible.rs  copy_button.rs  data_list.rs  descriptions.rs  diff_viewer.rs  divider.rs  drag_region.rs  drop_zone.rs  empty_state.rs  flex.rs  focus_ring.rs  hero.rs  icon.rs  indicator.rs  kbd.rs  kbd_combo.rs  key_value.rs  line_numbers.rs  link.rs  list.rs  live_region.rs  media_card.rs  metric_card.rs  mod.rs  notice.rs  progress.rs  progress_ring.rs  qr_code.rs  quote.rs  (+14 more)
crates/acme-ui/src/inputs/: autocomplete.rs  button_group.rs  cascader.rs  checkbox.rs  checkbox_cards.rs  color_picker.rs  combobox.rs  date_picker.rs  date_range_picker.rs  file_upload.rs  form_field.rs  form_message.rs  icon_button.rs  input_group.rs  input_otp.rs  mentions.rs  mod.rs  multi_select.rs  number_input.rs  password_input.rs  pin_input.rs  radio.rs  radio_cards.rs  range_slider.rs  rating.rs  search_input.rs  segmented_control.rs  select.rs  slider.rs  slider_marks.rs  switch.rs  tag_input.rs  text_field.rs  textarea.rs  time_picker.rs  toggle_button.rs  toggle_group.rs  transfer.rs  tree_select.rs
crates/acme-ui/src/layout/: affix.rs  anchor.rs  app_bar.rs  bottom_navigation.rs  breadcrumb.rs  form.rs  grid.rs  image_list.rs  inset.rs  masonry.rs  mod.rs  navigation_menu.rs  page_header.rs  pagination.rs  paper.rs  resizable.rs  scroll_area.rs  section.rs  settings_page.rs  sidebar.rs  split_panel.rs  status_bar.rs  stepper.rs  tabs.rs  toolbar.rs
crates/acme-ui/src/mobile/: action_sheet.rs  bottom_nav.rs  bottom_sheet.rs  mobile_action.rs  mobile_avatar.rs  mobile_banner.rs  mobile_button.rs  mobile_card.rs  mobile_chip.rs  mobile_list_item.rs  mobile_loader.rs  mobile_notification.rs  mobile_progress.rs  mobile_search.rs  mobile_segmented.rs  mobile_sheet_handle.rs  mobile_stepper.rs  mobile_toggle.rs  mod.rs  pull_to_refresh.rs  search_bar.rs
crates/acme-ui/src/overlay/: about_dialog.rs  backdrop.rs  command_palette.rs  confirm_dialog.rs  context_menu.rs  drawer.rs  dropdown_menu.rs  float_button.rs  fullscreen.rs  hover_card.rs  mod.rs  modal.rs  notification.rs  speed_dial.rs  toast.rs  tour.rs
crates/acme-widgets/: Cargo.toml
docs/: BLUEPRINT.md  CBM_IMPROVEMENT_REPORT.md  CHANGELOG.md  MANUAL_VALIDATION.md  _check.txt  component_maturity_audit.md  project-status.yaml
docs/adr/: 0001-wgpu.md  0002-retained-tree.md
docs/architecture/: API_DESIGN.md  DEFAULT_TEMPLATE.md
docs/guides/: MANUAL_VALIDATION.md  TEXT_AND_IME.md
docs/plans/: P0-001_ordered_display_list.md  P0-002_runtimetree_integration.md
docs/reports/: component_maturity_audit.md
docs/specs/: plan.md
docs/status/: STATUS.md  final.md  (+3 more)
scripts/: capture-gallery.ps1
(+91 files in other folders)
