[package]
name = "acme-ui-gallery"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
acme-ui = { path = "../../crates/acme-ui", features = ["full"] }
acme-core = { path = "../../crates/acme-core" }
acme-layout = { path = "../../crates/acme-layout" }
acme-theme = { path = "../../crates/acme-theme" }
acme-widgets = { path = "../../crates/acme-widgets" }
acme-text = { path = "../../crates/acme-text" }
acme-textinput = { path = "../../crates/acme-textinput" }
acme-render-wgpu = { path = "../../crates/acme-render-wgpu" }
acme-platform = { path = "../../crates/acme-platform" }
