[package]
name = "acme-accessibility"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
accesskit.workspace = true
accesskit_winit.workspace = true
acme-core = { path = "../acme-core" }
acme-layout = { path = "../acme-layout" }
acme-platform = { path = "../acme-platform" }
acme-widgets = { path = "../acme-widgets" }
acme-theme = { path = "../acme-theme" }
