[package]
name = "acme-platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
winit.workspace = true
thiserror.workspace = true
pollster.workspace = true
tracing.workspace = true
arboard.workspace = true
acme-core = { path = "../acme-core" }
acme-render-wgpu = { path = "../acme-render-wgpu" }
