[package]
name = "acme-render-wgpu"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wgpu.workspace = true
winit.workspace = true
bytemuck.workspace = true
thiserror.workspace = true
acme-core = { path = "../acme-core" }
acme-text = { path = "../acme-text" }
