[package]
name = "acme-style"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GPUI-inspired Styled trait + Tailwind CSS-like utility methods for AcmeUI Native"

[dependencies]
acme-core = { path = "../acme-core" }
acme-theme = { path = "../acme-theme" }
acme-layout = { path = "../acme-layout" }
