[package]
name = "acme-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["foundations", "inputs", "layout", "overlay"]
foundations = []
inputs = []
layout = []
overlay = []
charts = []
desktop = []
mobile = []
browser = []
full = ["foundations", "inputs", "layout", "overlay", "charts", "desktop", "mobile", "browser"]

[dependencies]
acme-core = { path = "../acme-core" }
acme-widgets = { path = "../acme-widgets" }
acme-layout = { path = "../acme-layout" }
acme-theme = { path = "../acme-theme" }
acme-text = { path = "../acme-text" }
